--- a/UI/src/app/components/baskan-hakkinda/baskan-hakkinda.html
+++ b/UI/src/app/components/baskan-hakkinda/baskan-hakkinda.html
@@ -1,7 +1,7 @@
 <app-page-container title="Başkan Hakkında" [breadcrumbSteps]="breadcrumbSteps">
     <div class="flex flex-col md:flex-row min-h-[500px]">
         <!-- Image Section -->
-        <div class="md:w-1/3 lg:w-1/4 relative">
+        <div class="h-96 md:h-auto md:w-1/3 lg:w-1/4 relative">
             <img src="assets/images/mustafa_cebeci.jpg" alt="Mustafa Cebeci"
                 class="w-full h-full object-cover absolute inset-0">
         </div>
